# databricks_pipelines

./: .env_template  .gitignore  LICENSE  Makefile  README.md  databricks.yml  pyproject.toml
.github/actions/setup_python/: action.yml
.github/workflows/: checks.yml  deploy.yml
databricks/resources/: jobs_description.yml
databricks/variables/: common_variables.yml
databricks_bundle/resources/: job_whole_pipeline.yml  jobs_definition.yml
databricks_bundle/variables/: common_variables.yml
raw_data/: austin_police_codes.csv  readme.md
resources/: job_definitions.yml  variables.yml
src/jobs/: main_job.py
src/jobs/austin_police/: job_creator.py
src/jobs/proj_a/: __init__.py  job_a_creator.py  job_b_creator.py
src/lib/: __init__.py  clusters.py  common_cfg.py  data_structures.py  dbricks.py  helpers.py  job.py  spark.py
src/notebooks/0_raw/: get_raw_austin_pd_codes.py  get_raw_austin_pd_crimes.py
src/notebooks/1_bronze/: read_austin_pd_codes.py  read_austin_pd_crimes.py
src/notebooks/2_silver/: enrich_pd_crimes.py
src/notebooks/proj_a/: dummy_notebook.py
src/notebooks/raw/: get_raw_austin_pd_crimes.py
src/notebooks/silver/: enrich_pd_crimes.py
src/scripts/: upload_lib.py  upload_notebooks.py
